# randomize

./: CMakeLists.txt  install.cmake-dist  randomize.py
pycuda/: density_example.py  randomize.py
src/randomize/: Array.h  BoxMuller.h  CMakeLists.txt  Data.h  Distrib.h  ErfInv.h  Inverse.h  InverseCumulativeNormal.h  MT.h  MTNormalMono.h  MTUniform.h  Marsaglia.h  Matrix.h  NormalMono.h  PRNG.h  QRNG.h  RNG.h  Sampler.h  SamplerNormalMono.h  SamplerUniform.h  Sobol.h  SobolNormalMono.h  SobolUniform.h  Uniform.h  Vector.h  VectorBounds.h  Xorshift.h  XorshiftNormalMono.h  XorshiftUniform.h  common.h  randomize  randomize.cu
src/randomize/kernel/: CMakeLists.txt  boxmuller.h  kernel  kernel.cu
test/: CMakeLists.txt  t-docexample.cu  t-sampler.cu
