PROJECT(kernel)

FILE(GLOB HDRS *.h ${PROJECT_NAME})
INSTALL(FILES ${HDRS} DESTINATION include/randomize/${PROJECT_NAME} COMPONENT headers)

FILE(GLOB SOURCES *.cu)
CUDA_ADD_LIBRARY(randomize_${PROJECT_NAME} STATIC ${SOURCES})
INSTALL(TARGETS randomize_${PROJECT_NAME} ARCHIVE DESTINATION lib COMPONENT libraries)
